--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,8 +16,13 @@
     "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1"
   },
   "dependencies": {
+    "@aa-sdk/core": "^4.70.1",
+    "@account-kit/infra": "^4.70.1",
+    "@account-kit/smart-contracts": "^4.70.1",
     "@heroicons/react": "~2.1.5",
     "@metamask/delegation-toolkit": "^0.13.0",
+    "@privy-io/react-auth": "latest",
+    "@privy-io/wagmi": "^2.0.1",
     "@rainbow-me/rainbowkit": "2.2.8",
     "@tanstack/react-query": "~5.59.15",
     "@uniswap/sdk-core": "~5.8.2",
