--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aa-sdk/core": "^4.73.0",
+    "@account-kit/infra": "^4.73.0",
+    "@account-kit/smart-contracts": "^4.73.0",
+    "@privy-io/react-auth": "^3.3.0",
+    "@privy-io/wagmi": "^2.0.1",
+    "next": "15.5.6",
+    "permissionless": "^0.2.57",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "viem": "^2.38.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
