--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "gasless-payments-clean",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "hardhat:compile": "hardhat compile",
+    "hardhat:test": "hardhat test",
+    "hardhat:test:solidity": "hardhat test solidity",
+    "hardhat:test:nodejs": "hardhat test nodejs",
+    "hardhat:deploy": "hardhat run scripts/deploy.ts --network localhost",
+    "hardhat:deploy:test": "hardhat run scripts/deploy-test.ts --network localhost",
+    "hardhat:deploy:sepolia": "hardhat run scripts/deploy.ts --network sepolia",
+    "hardhat:deploy:ignition": "hardhat ignition deploy ignition/modules/SimpleAccount.ts",
+    "hardhat:deploy:ignition:sepolia": "hardhat ignition deploy ignition/modules/SimpleAccount.ts --network sepolia"
   },
   "dependencies": {
     "@aa-sdk/core": "^4.73.0",
@@ -22,12 +32,17 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@nomicfoundation/hardhat-ignition-viem": "^3.0.0",
+    "@nomicfoundation/hardhat-viem": "^3.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
+    "ethers": "^6.15.0",
+    "forge-std": "github:foundry-rs/forge-std#v1.9.7",
+    "hardhat": "^3.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
