--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@aa-sdk/core": "^4.73.0",
     "@account-kit/infra": "^4.73.0",
     "@account-kit/smart-contracts": "^4.73.0",
+    "@openzeppelin/contracts": "^5.4.0",
     "@privy-io/react-auth": "^3.3.0",
     "@privy-io/wagmi": "^2.0.1",
     "next": "15.5.6",
