--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "forge-std": "github:foundry-rs/forge-std#v1.9.7",
     "hardhat": "^3.0.7",
     "hardhat-deploy": "^1.0.4",
+    "ignore-loader": "^0.1.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
