--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@openzeppelin/contracts": "^5.4.0",
     "@privy-io/react-auth": "^3.3.0",
     "@privy-io/wagmi": "^2.0.1",
+    "@types/qrcode": "^1.5.5",
     "next": "15.5.6",
     "permissionless": "^0.2.57",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "viem": "^2.38.3"
